# elm-cardano

./: .gitignore  Cargo.toml  LICENSE  README.md  dist-workspace.toml  docs.json  elm.json  package-lock.json  package.json
.github/workflows/: build-setup.yml  elm.yml  release.yml  test.yml
cli/: Cargo.toml
cli/src/: main.rs
examples/: README.md
examples/aiken-gift-card/: .gitignore  README.md  aiken.toml  elm.json
examples/aiken-hello-world/: .gitignore  README.md  elm.json
examples/archived_buidler-fest-2024/: README.md  elm-cardano.js  elm.json  index.html  package-lock.json
examples/buidler-fest-2024/: .gitignore  Main.elm  Ogmios6.elm  elm-cardano.js  index.html  package.json
examples/fee-provider/: README.md
examples/interactive-tx-builder/: README.md  index.html
examples/ogmios/: .gitignore  Main.elm  Ogmios6.elm  README.md  elm-cardano.js  elm.json  index.html
examples/smart-bucket/: README.md  aiken.toml
examples/smart-vote-collat-provider/: index.html
examples/txbuild/: Main.elm  README.md  elm-watch.json  index.html
examples/vote-native-script/: README.md  elm-watch.json  index.html
examples/vote-script/: README.md  aiken.toml
examples/wallet-cip30/: Cip30.elm  Main.elm  README.md  Wallet.elm  elm-cardano.js  elm-watch.json  elm.json  index.html
review/: elm.json
src/: Blake2b.elm  BytesMap.elm  Cardano.elm  ComparableBytes.elm  RationalNat.elm  TempTxTest.elm  Word7.elm
src/Blake2b/: Int128.elm  (+2 more)
templates/: apply-params-to-script-kernel.js  elm-cardano.js  eval-script-costs-kernel.js
tests/: Crc8Tests.elm  Tests.elm
(+102 files in other folders)
